(executable
 (name main)
 (modes js)
 (modules main)
 (js_of_ocaml (flags --enable effects))
 (preprocess (pps ppx_deriving_brr))
 (libraries eio_browser))

(rule
  (deps main.bc.js index.html)
  (target index.js)
  (action (copy main.bc.js index.js)))

(executable
 (name server)
 (modules server)
 (libraries eio_main websocket-eio))